Changes to be committed: 	modified:   README.md 	modified:   TODO 	modified:   requirements.txt 	modified:   run.sh 	new file:   src/__init__.py 	new file:   src/constants.py 	new file:   src/crud.py 	deleted:    src/data.py 	new file:   src/database.db 	new file:   src/database.py 	deleted:    src/db.py 	modified:   src/devices.py 	modified:   src/main.py 	new file:   src/models.py 	new file:   src/schemas.py 	new file:   src/test/tests.py
Added SQLAlchemy database Read + Create

--- a/TODO
+++ b/TODO
@@ -1,2 +1,4 @@
 TODO:
-- Replace del_device endpoint params to just id
+- Add the concurrent code for the devices
+- Testing
+- Devices now communicate directly over their serial number
