Tested API for databases, all working
Changes to be committed:
	modified:   TODO
	modified:   data/database.db
	modified:   src/crud.py
	modified:   src/main.py
	modified:   src/models.py
	modified:   src/schemas.py

--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@ TODO:
 - Add the concurrent code for the devices
 - Testing
 - Devices now communicate directly over their serial number
+- Add constants for error codes
