--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 TODO:
-- Add the concurrent code for the devices
-- Testing
 - Devices now communicate directly over their serial number
 - Add constants for error codes
+- Authentication
+- Get requests for status
+- Database for device status
